Update time tracking form and package configuration
- Modified the form to log time entries for projects, including fields for customer/project, task, comment, and start time.
- Added validation for the customer/project field.
- Updated package.json to reflect changes in the command title and description.
- Introduced package-lock.json for dependency management.
- Added .gitignore entry for mcp.json files.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "commands": [
     {
       "name": "papierkram-time-tracking",
-      "title": "Papierkram Time Tracking",
-      "description": "Track time for a given Papierkram Projekt",
+      "title": "Log Time Entry",
+      "description": "Log a time entry to Papierkram",
       "mode": "view"
     }
   ],
