--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.96.0",
-    "@raycast/utils": "^1.17.0"
+    "@raycast/utils": "^1.17.0",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^2.0.4",
